--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.23",
+    "axios": "^1.7.4",
+    "firebase": "^10.12.5",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
-    "sweetalert2": "^11.12.4"
+    "sweetalert2": "^11.12.4",
+    "swiper": "^11.1.9",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
