--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.4",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.5",
     "formik": "^2.4.6",
     "react": "^18.3.1",
