--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "sweetalert2": "^11.12.4",
     "swiper": "^11.1.9",
     "yup": "^1.4.0"
